Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -372,6 +372,39 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Vistazo a los datos"
+      ],
+      "metadata": {
+        "id": "Tk54zx9qMr1e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se hace un proceso de limpieza de datos, datos nulos (sin datos nulos)"
+      ],
+      "metadata": {
+        "id": "XLyAUI3aM4eq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nulos1 = tienda.isnull().sum()\n",
+        "nulos2 = tienda2.isnull().sum()\n",
+        "nulos3 = tienda3.isnull().sum()\n",
+        "nulos4 = tienda4.isnull().sum()\n",
+        "# print(nulos1,nulos2,nulos3,nulos4)"
+      ],
+      "metadata": {
+        "id": "l_CQbJyzNR2c"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "X62IW3KFUIYm"
       },
@@ -381,14 +414,45 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xykobSftV64I"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "xd"
+        "## Ingreso total por tienda"
+      ],
+      "metadata": {
+        "id": "DeSQVM3cRxkf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "xykobSftV64I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4d30916b-2475-4fb0-b848-8f4443aa644b"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       tienda_1      Tienda_2      Tienda_3      Tienda_4\n",
+            "0  1.150880e+09  1.116344e+09  1.098020e+09  1.038376e+09\n"
+          ]
+        }
+      ],
+      "source": [
+        "ingreso_tienda1 = tienda.Precio.sum()\n",
+        "ingreso_tienda2 = tienda2.Precio.sum()\n",
+        "ingreso_tienda3 = tienda3.Precio.sum()\n",
+        "ingreso_tienda4 = tienda4.Precio.sum()\n",
+        "\n",
+        "ingresos_tiendas = pd.DataFrame({\"tienda_1\": [ingreso_tienda1],\n",
+        "                                 \"Tienda_2\": [ingreso_tienda2],\n",
+        "                                 \"Tienda_3\": [ingreso_tienda3],\n",
+        "                                 \"Tienda_4\": [ingreso_tienda4]})\n",
+        "print(ingresos_tiendas)"
       ]
     },
     {
