Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -28,7 +28,7 @@
           "height": 213
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "6693d52e-a72e-4a1e-ce4c-99a99245ad86"
+        "outputId": "9db79447-f5ba-4ffe-f897-6807867f13ce"
       },
       "outputs": [
         {
@@ -52,7 +52,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4898a029-5a64-45f1-b6df-7ccd9454944b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-000ea519-8d32-4725-b963-75f6684f537a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -137,7 +137,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4898a029-5a64-45f1-b6df-7ccd9454944b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-000ea519-8d32-4725-b963-75f6684f537a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -189,12 +189,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4898a029-5a64-45f1-b6df-7ccd9454944b button.colab-df-convert');\n",
+              "        document.querySelector('#df-000ea519-8d32-4725-b963-75f6684f537a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4898a029-5a64-45f1-b6df-7ccd9454944b');\n",
+              "        const element = document.querySelector('#df-000ea519-8d32-4725-b963-75f6684f537a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -214,8 +214,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-5fde0db0-57ab-4e53-9960-e76239400241\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5fde0db0-57ab-4e53-9960-e76239400241')\"\n",
+              "    <div id=\"df-acc6d7b5-9278-4ba0-80c8-55f811afa2b5\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-acc6d7b5-9278-4ba0-80c8-55f811afa2b5')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -334,7 +334,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-5fde0db0-57ab-4e53-9960-e76239400241 button');\n",
+              "            document.querySelector('#df-acc6d7b5-9278-4ba0-80c8-55f811afa2b5 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -400,7 +400,7 @@
       "metadata": {
         "id": "l_CQbJyzNR2c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "xykobSftV64I",
         "colab": {
@@ -457,12 +457,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "KDyr8E71V3m-"
+        "id": "KDyr8E71V3m-",
+        "outputId": "22ead427-b201-4c78-ed64-b57f7f45b9dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Electrónicos', 'Muebles', 'Juguetes', 'Electrodomésticos',\n",
+              "       'Artículos para el hogar', 'Deportes y diversión', 'Libros',\n",
+              "       'Instrumentos musicales'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ],
+      "source": [
+        "tienda['Categoría del Producto'].unique()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -475,16 +494,112 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "A34YupIuYhfF"
+        "id": "A34YupIuYhfF",
+        "outputId": "c4258158-4eee-4573-ea6e-45202d4557c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 366
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Categoría del Producto\n",
+              "Muebles                    480\n",
+              "Electrónicos               451\n",
+              "Juguetes                   338\n",
+              "Deportes y diversión       277\n",
+              "Electrodomésticos          254\n",
+              "Artículos para el hogar    201\n",
+              "Libros                     187\n",
+              "Instrumentos musicales     170\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Categoría del Producto</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Muebles</th>\n",
+              "      <td>480</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Electrónicos</th>\n",
+              "      <td>451</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Juguetes</th>\n",
+              "      <td>338</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Deportes y diversión</th>\n",
+              "      <td>277</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Electrodomésticos</th>\n",
+              "      <td>254</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Artículos para el hogar</th>\n",
+              "      <td>201</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Libros</th>\n",
+              "      <td>187</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Instrumentos musicales</th>\n",
+              "      <td>170</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ],
+      "source": [
+        "# Que producto se vendio mas en cada tienda\n",
+        "#se selecciona la columna de categorias y se usa value_counts() para contar cuantos valores hay para cada incidencia distinta, que para este caso son la cantidad vendida\n",
+        "ventas_categoria1 = tienda['Categoría del Producto'].value_counts().sort_values(ascending = False)\n",
+        "ventas_categoria2 = tienda2['Categoría del Producto'].value_counts().sort_values(ascending = False)\n",
+        "ventas_categoria3 = tienda3['Categoría del Producto'].value_counts().sort_values(ascending = False)\n",
+        "ventas_categoria4 = tienda4['Categoría del Producto'].value_counts().sort_values(ascending = False)\n",
+        "# ventas_categoria4"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "yZR6cOjXYSk1"
       },
@@ -501,21 +616,114 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## Porcentaje de cada evauacion\n",
+        "\n",
+        "Se obtiene el porcentaje para cada calificación para que, además de ver la valoracion promedio, saber en que porcentaje se dan estas calificaciones"
+      ],
       "metadata": {
-        "id": "bh3jjjJwY5MU"
-      },
-      "outputs": [],
-      "source": []
+        "id": "rAz2R7DiTyuO"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
-        "id": "I0KkjPoTY88F"
+        "id": "bh3jjjJwY5MU",
+        "outputId": "a406e71d-c046-480d-d0df-8760c0b0348c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Calificación\n",
+            "5    54.768970\n",
+            "4    18.821535\n",
+            "1    13.522679\n",
+            "3     9.241204\n",
+            "2     3.645613\n",
+            "Name: proportion, dtype: float64 Calificación\n",
+            "5    55.192878\n",
+            "4    20.432387\n",
+            "1    11.572700\n",
+            "3     8.859686\n",
+            "2     3.942348\n",
+            "Name: proportion, dtype: float64 Calificación\n",
+            "5    57.481984\n",
+            "4    18.397626\n",
+            "1    12.590081\n",
+            "3     8.181433\n",
+            "2     3.348877\n",
+            "Name: proportion, dtype: float64 Calificación\n",
+            "5    55.131467\n",
+            "4    19.211196\n",
+            "1    13.146735\n",
+            "3     8.905852\n",
+            "2     3.604750\n",
+            "Name: proportion, dtype: float64\n",
+            "3.976685036032217 4.037303942348453 4.048325561678677 3.9957591178965224\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Porcentaje para cada\n",
+        "porcentaje_tienda1 = tienda['Calificación'].value_counts(normalize=True).sort_values(ascending = False)*100\n",
+        "porcentaje_tienda2 = tienda2['Calificación'].value_counts(normalize=True).sort_values(ascending = False)*100\n",
+        "porcentaje_tienda3 = tienda3['Calificación'].value_counts(normalize=True).sort_values(ascending = False)*100\n",
+        "porcentaje_tienda4 = tienda4['Calificación'].value_counts(normalize=True).sort_values(ascending = False)*100\n",
+        "\n",
+        "print(porcentaje_tienda1,porcentaje_tienda2,porcentaje_tienda3,porcentaje_tienda4)\n",
+        "\n",
+        "Calificacion_tienda1 = tienda.Calificación.mean()\n",
+        "Calificacion_tienda2 = tienda2.Calificación.mean()\n",
+        "Calificacion_tienda3 = tienda3.Calificación.mean()\n",
+        "Calificacion_tienda4 = tienda4.Calificación.mean()\n",
+        "\n",
+        "print(Calificacion_tienda1,Calificacion_tienda2,Calificacion_tienda3,Calificacion_tienda4)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {
+        "id": "I0KkjPoTY88F",
+        "outputId": "90d1ab35-bc38-4f0e-9481-b7caf0d73886",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Asistente virtual', 'Mesa de comedor', 'Juego de mesa',\n",
+              "       'Microondas', 'Silla de oficina', 'Bloques de construcción',\n",
+              "       'Muñeca bebé', 'Lavavajillas', 'Lavadora de ropa',\n",
+              "       'Carrito de control remoto', 'Refrigerador', 'Auriculares',\n",
+              "       'Olla de presión', 'Bicicleta', 'Ciencia de datos con Python',\n",
+              "       'Balón de voleibol', 'Ajedrez de madera', 'TV LED UHD 4K',\n",
+              "       'Vaso térmico', 'Kit de bancas', 'Dashboards con Power BI',\n",
+              "       'Cubertería', 'Set de ollas', 'Batería', 'Cuerda para saltar',\n",
+              "       'Estufa', 'Cama box', 'Impresora', 'Mesa de noche', 'Armario',\n",
+              "       'Dinosaurio Rex', 'Guitarra eléctrica', 'Secadora de ropa',\n",
+              "       'Sofá reclinable', 'Tablet ABXY', 'Cubo mágico 8x8',\n",
+              "       'Set de vasos', 'Modelado predictivo', 'Iphone 15', 'Mochila',\n",
+              "       'Balón de baloncesto', 'Auriculares con micrófono', 'Sillón',\n",
+              "       'Guitarra acústica', 'Iniciando en programación', 'Celular ABXY',\n",
+              "       'Smartwatch', 'Mesa de centro', 'Cama king', 'Smart TV',\n",
+              "       'Pandereta'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ],
       "source": []
     },
     {
