Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -460,10 +460,10 @@
       "execution_count": 14,
       "metadata": {
         "id": "KDyr8E71V3m-",
-        "outputId": "22ead427-b201-4c78-ed64-b57f7f45b9dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "22ead427-b201-4c78-ed64-b57f7f45b9dd"
       },
       "outputs": [
         {
@@ -497,11 +497,11 @@
       "execution_count": 23,
       "metadata": {
         "id": "A34YupIuYhfF",
-        "outputId": "c4258158-4eee-4573-ea6e-45202d4557c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 366
-        }
+        },
+        "outputId": "c4258158-4eee-4573-ea6e-45202d4557c0"
       },
       "outputs": [
         {
@@ -628,13 +628,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 47,
       "metadata": {
         "id": "bh3jjjJwY5MU",
-        "outputId": "a406e71d-c046-480d-d0df-8760c0b0348c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f7e61b6a-feb6-4221-d0a2-b0f46c6940b0"
       },
       "outputs": [
         {
@@ -647,38 +647,42 @@
             "1    13.522679\n",
             "3     9.241204\n",
             "2     3.645613\n",
-            "Name: proportion, dtype: float64 Calificación\n",
-            "5    55.192878\n",
-            "4    20.432387\n",
-            "1    11.572700\n",
-            "3     8.859686\n",
-            "2     3.942348\n",
-            "Name: proportion, dtype: float64 Calificación\n",
-            "5    57.481984\n",
-            "4    18.397626\n",
-            "1    12.590081\n",
-            "3     8.181433\n",
-            "2     3.348877\n",
-            "Name: proportion, dtype: float64 Calificación\n",
-            "5    55.131467\n",
-            "4    19.211196\n",
-            "1    13.146735\n",
-            "3     8.905852\n",
-            "2     3.604750\n",
-            "Name: proportion, dtype: float64\n",
-            "3.976685036032217 4.037303942348453 4.048325561678677 3.9957591178965224\n"
+            "Name: proportion, dtype: float64\n"
           ]
         }
       ],
       "source": [
-        "# Porcentaje para cada\n",
+        "# Porcentaje para cada tienda\n",
         "porcentaje_tienda1 = tienda['Calificación'].value_counts(normalize=True).sort_values(ascending = False)*100\n",
         "porcentaje_tienda2 = tienda2['Calificación'].value_counts(normalize=True).sort_values(ascending = False)*100\n",
         "porcentaje_tienda3 = tienda3['Calificación'].value_counts(normalize=True).sort_values(ascending = False)*100\n",
         "porcentaje_tienda4 = tienda4['Calificación'].value_counts(normalize=True).sort_values(ascending = False)*100\n",
         "\n",
-        "print(porcentaje_tienda1,porcentaje_tienda2,porcentaje_tienda3,porcentaje_tienda4)\n",
-        "\n",
+        "# ejemplo de una tienda\n",
+        "print(porcentaje_tienda1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {
+        "id": "I0KkjPoTY88F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c0c8873-4b3c-4440-cef7-966f77b170ba"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.976685036032217 4.037303942348453 4.048325561678677 3.9957591178965224\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Calificacion general para cada tienda respectivamente\n",
         "Calificacion_tienda1 = tienda.Calificación.mean()\n",
         "Calificacion_tienda2 = tienda2.Calificación.mean()\n",
         "Calificacion_tienda3 = tienda3.Calificación.mean()\n",
@@ -686,45 +690,6 @@
         "\n",
         "print(Calificacion_tienda1,Calificacion_tienda2,Calificacion_tienda3,Calificacion_tienda4)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {
-        "id": "I0KkjPoTY88F",
-        "outputId": "90d1ab35-bc38-4f0e-9481-b7caf0d73886",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array(['Asistente virtual', 'Mesa de comedor', 'Juego de mesa',\n",
-              "       'Microondas', 'Silla de oficina', 'Bloques de construcción',\n",
-              "       'Muñeca bebé', 'Lavavajillas', 'Lavadora de ropa',\n",
-              "       'Carrito de control remoto', 'Refrigerador', 'Auriculares',\n",
-              "       'Olla de presión', 'Bicicleta', 'Ciencia de datos con Python',\n",
-              "       'Balón de voleibol', 'Ajedrez de madera', 'TV LED UHD 4K',\n",
-              "       'Vaso térmico', 'Kit de bancas', 'Dashboards con Power BI',\n",
-              "       'Cubertería', 'Set de ollas', 'Batería', 'Cuerda para saltar',\n",
-              "       'Estufa', 'Cama box', 'Impresora', 'Mesa de noche', 'Armario',\n",
-              "       'Dinosaurio Rex', 'Guitarra eléctrica', 'Secadora de ropa',\n",
-              "       'Sofá reclinable', 'Tablet ABXY', 'Cubo mágico 8x8',\n",
-              "       'Set de vasos', 'Modelado predictivo', 'Iphone 15', 'Mochila',\n",
-              "       'Balón de baloncesto', 'Auriculares con micrófono', 'Sillón',\n",
-              "       'Guitarra acústica', 'Iniciando en programación', 'Celular ABXY',\n",
-              "       'Smartwatch', 'Mesa de centro', 'Cama king', 'Smart TV',\n",
-              "       'Pandereta'], dtype=object)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 38
-        }
-      ],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -737,12 +702,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {
-        "id": "qoyjqijQZHfF"
+        "id": "qoyjqijQZHfF",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "outputId": "77f21007-41da-4a7a-fcc0-46a642b14185"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Ciencia de datos con Python    39\n",
+              "Pandereta                      36\n",
+              "Olla de presión                35\n",
+              "Auriculares con micrófono      33\n",
+              "Celular ABXY                   33\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Producto</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Ciencia de datos con Python</th>\n",
+              "      <td>39</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Pandereta</th>\n",
+              "      <td>36</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Olla de presión</th>\n",
+              "      <td>35</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Auriculares con micrófono</th>\n",
+              "      <td>33</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Celular ABXY</th>\n",
+              "      <td>33</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ],
+      "source": [
+        "tienda.Producto.value_counts().tail()"
+      ]
     },
     {
       "cell_type": "code",
