Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -702,96 +702,126 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 75,
       "metadata": {
         "id": "qoyjqijQZHfF",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 272
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "77f21007-41da-4a7a-fcc0-46a642b14185"
+        "outputId": "d2c6c187-ec03-463f-cea9-02f7b7523855"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Producto\n",
-              "Ciencia de datos con Python    39\n",
-              "Pandereta                      36\n",
-              "Olla de presión                35\n",
-              "Auriculares con micrófono      33\n",
-              "Celular ABXY                   33\n",
-              "Name: count, dtype: int64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Producto</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Ciencia de datos con Python</th>\n",
-              "      <td>39</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Pandereta</th>\n",
-              "      <td>36</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Olla de presión</th>\n",
-              "      <td>35</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Auriculares con micrófono</th>\n",
-              "      <td>33</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Celular ABXY</th>\n",
-              "      <td>33</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 55
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mas vendidos de la tienda 1\n",
+            " Producto\n",
+            "Microondas          60\n",
+            "TV LED UHD 4K       60\n",
+            "Armario             60\n",
+            "Secadora de ropa    58\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Mas vendidos de la tienda 2\n",
+            " Producto\n",
+            "Iniciando en programación    65\n",
+            "Microondas                   62\n",
+            "Batería                      61\n",
+            "Guitarra acústica            58\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Mas vendidos de la tienda 3\n",
+            " Producto\n",
+            "Kit de bancas      57\n",
+            "Mesa de comedor    56\n",
+            "Cama king          56\n",
+            "Set de ollas       55\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Mas vendidos de la tienda 4\n",
+            " Producto\n",
+            "Cama box                   62\n",
+            "Cubertería                 59\n",
+            "Dashboards con Power BI    56\n",
+            "Cama king                  56\n",
+            "Name: count, dtype: int64\n"
+          ]
         }
       ],
       "source": [
-        "tienda.Producto.value_counts().tail()"
+        "mas_vendido_tienda1 = tienda.Producto.value_counts().head(4)\n",
+        "mas_vendido_tienda2 = tienda2.Producto.value_counts().head(4)\n",
+        "mas_vendido_tienda3 = tienda3.Producto.value_counts().head(4)\n",
+        "mas_vendido_tienda4 = tienda4.Producto.value_counts().head(4)\n",
+        "\n",
+        "print(\"Mas vendidos de la tienda 1\\n\",mas_vendido_tienda1)\n",
+        "print(\"\\nMas vendidos de la tienda 2\\n\",mas_vendido_tienda2)\n",
+        "print(\"\\nMas vendidos de la tienda 3\\n\",mas_vendido_tienda3)\n",
+        "print(\"\\nMas vendidos de la tienda 4\\n\",mas_vendido_tienda4)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
-        "id": "0Sw3sd4IZIGW"
+        "id": "0Sw3sd4IZIGW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a43bd7a3-78a5-40ff-a896-f7f20f4aa101"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Menos vendidos de la tienda 1\n",
+            " Producto\n",
+            "Pandereta                    36\n",
+            "Olla de presión              35\n",
+            "Auriculares con micrófono    33\n",
+            "Celular ABXY                 33\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Menos vendidos de la tienda 2\n",
+            " Producto\n",
+            "Sillón             35\n",
+            "Mesa de comedor    34\n",
+            "Impresora          34\n",
+            "Juego de mesa      32\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Menos vendidos de la tienda 3\n",
+            " Producto\n",
+            "Set de vasos               36\n",
+            "Mochila                    36\n",
+            "Microondas                 36\n",
+            "Bloques de construcción    35\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Menos vendidos de la tienda 4\n",
+            " Producto\n",
+            "Ciencia de datos con Python    38\n",
+            "Guitarra acústica              37\n",
+            "Armario                        34\n",
+            "Guitarra eléctrica             33\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "#menos vendidos por tienda\n",
+        "menos_vendido_tienda1 = tienda.Producto.value_counts().tail(4)\n",
+        "menos_vendido_tienda2 = tienda2.Producto.value_counts().tail(4)\n",
+        "menos_vendido_tienda3 = tienda3.Producto.value_counts().tail(4)\n",
+        "menos_vendido_tienda4 = tienda4.Producto.value_counts().tail(4)\n",
+        "\n",
+        "print(\"Menos vendidos de la tienda 1\\n\",menos_vendido_tienda1)\n",
+        "print(\"\\nMenos vendidos de la tienda 2\\n\",menos_vendido_tienda2)\n",
+        "print(\"\\nMenos vendidos de la tienda 3\\n\",menos_vendido_tienda3)\n",
+        "print(\"\\nMenos vendidos de la tienda 4\\n\",menos_vendido_tienda4)"
+      ]
     },
     {
       "cell_type": "markdown",
